# ai-assistant

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  agent-cli-config.toml  agent-cli-config.toml.example  dev.py  example.agent-cli-config.toml  fix_my_text_ollama.py  pid_file_analysis.md  pyproject.toml  shell.nix  transcribe.py  voice_clipboard_assistant.py  wake_word_assistant_implementation_summary.md
.github/workflows/: pytest.yml  update-readme.yml
agent_cli/: __init__.py  asr.py  audio.py  cli.py  config.py  config_loader.py  llm.py  tools.py  tts.py  utils.py  wake_word.py  wyoming_utils.py
agent_cli/agents/: __init__.py  _cli_options.py  _config.py  _tts_common.py  autocorrect.py  interactive.py  speak.py  transcribe.py  voice_assistant.py  wake_word_assistant.py
ai_assistant/: __init__.py  asr.py  cli.py  config.py  fix_my_text.py  ollama_client.py  process_manager.py  transcribe.py  utils.py  voice_assistant.py
ai_assistant/agents/: __init__.py  _cli_options.py  autocorrect.py  fix_my_text.py  transcribe.py  voice_assistant.py
examples/: __init__.py  docker-compose.yml  run_ollama.sh  tool_calling.py
examples/ollama/: id_ed25519  id_ed25519.pub
tests/: __init__.py  conftest.py  test_ai_assistant.py  test_asr.py  test_audio_e2e.py  test_cli.py  test_config.py  test_llm.py  test_ollama_client.py  test_process_manager.py  test_tools.py  test_tts.py  test_utils.py  test_wake_word.py
tests/agents/: test_fix_my_text.py  test_interactive.py  test_interactive_extra.py  test_speak.py  test_speak_e2e.py  test_transcribe.py  test_transcribe_agent.py  test_transcribe_e2e.py  test_tts_common.py  test_tts_common_extra.py  test_voice_assistant.py  test_voice_assistant_e2e.py  test_wake_word_assistant.py
tests/mocks/: __init__.py  audio.py  llm.py  wyoming.py
~/.config/agent-cli/history/: conversation.json
